# runtime

src/tests/profiler/native/: CMakeLists.txt  classfactory.cpp  logging.h  profiler.cpp  profiler.h  profilerstring.cpp  profilerstring.h
src/tests/profiler/native/eltprofiler/: CMakeLists.txt  slowpatheltprofiler.cpp
src/tests/profiler/native/eventpipeprofiler/: CMakeLists.txt  eventpipemetadatareader.cpp  eventpipemetadatareader.h  eventpipereadingprofiler.cpp  eventpipewritingprofiler.cpp
src/tests/profiler/native/gcbasicprofiler/: CMakeLists.txt  gcbasicprofiler.cpp
src/tests/profiler/native/gcprofiler/: CMakeLists.txt  gcprofiler.cpp
src/tests/profiler/native/getappdomainstaticaddress/: CMakeLists.txt  getappdomainstaticaddress.cpp
src/tests/profiler/native/instrumentation/: CMethodInfo.h  DynamicIL.cpp  ILOpcodes.h  OpcodeHelper.h
src/tests/profiler/native/legacy/: AsmMacros.inc  CMakeLists.txt  COMGoo.cpp  COMGoo.h  CoreSysComPtr.cpp  CoreSysComPtr.h  ILRewriter.h  IProfComLib.h  LegacyCompat.cpp  LegacyCompat.h  ProfilerCallbackTypedefs.h  ProfilerCommon.cpp  ProfilerCommon.h  ProfilerCommonHelper.h  SigParse.cpp  SigParse.h  TestProfiler.cpp  TestProfiler.def  TestProfiler.h  TestProfiler.rgs  amd64helpers1.S  amd64helpers1.asm  amd64helpers3.S  arm64asmconstants.h  arm64asmmacros.h  arm64helpers3.S  arm64helpers3.asm  armasmconstants.h  armhelpers3.S  armhelpers3.asm  asmconstants.inc  dirs.proj  functions.cmake  ilrewriter.cpp  ksarm.h  ksarm64.h  kxarm.h  kxarm64.h  kxarm64unw.h  kxarmunw.h  (+3 more)
src/tests/profiler/native/legacy/CEE/: CMakeLists.txt  Exceptions.cpp  InitializeCEE.cpp  Threads.cpp
src/tests/profiler/native/legacy/DST/: CMakeLists.txt  Orange.props  dirs.proj
src/tests/profiler/native/legacy/DST/ELT/: CMakeLists.txt  ELT3.cpp  InitializeELT.cpp
src/tests/profiler/native/legacy/DST/EventLog/: EventLog.cpp  EventLog.def  EventLog.h  EventLog.rgs  resource.h  resource.rc
src/tests/profiler/native/legacy/DST/InjectMetaData/: AssemblyInjector.cpp  AssemblyInjector.h  CMakeLists.txt  Helpers.h  InitializeInjectMetaData.cpp  InjectAssemblyRef.cpp  InjectAssemblyRef.h  InjectExternalCall.cpp  InjectExternalCall.h  InjectGenericTypes.cpp  InjectGenericTypes.h  InjectMetaData.cpp  InjectMetaData.h  InjectMethodSpec.cpp  InjectMethodSpec.h  InjectModuleRef.cpp  InjectModuleRef.h  InjectNewUserDefinedString.cpp  InjectNewUserDefinedString.h  InjectTypeSpec.cpp  InjectTypeSpec.h  InjectTypes.cpp  InjectTypes.h  MetadataSignatureBuilder.cpp  MetadataSignatureBuilder.h  SigParser.h  stdafx.h
src/tests/profiler/native/legacy/DST/Instrumentation/: CMakeLists.txt  CMethodInfo.h  CModuleInfo.h  DynamicIL.cpp  DynamicIL.h  Helpers.h  ILOpcodes.h  InstrumentationManaged.csproj  OpcodeHelper.h  StaticTargets.cs  StrongNameKey.snk  stdafx.cpp  stdafx.h
src/tests/profiler/native/legacy/DST/ProfileHub/: AllCallbacks.cpp  AllCallbacksWithDrilldown.cpp  Asynchronous.cpp  Asynchronous.h  CMakeLists.txt  CorPrfProfileFlags.cpp  DoStackSnapshot.cpp  DoStackSnapshot.h  ILToNativeMap.cpp  InitializeProfileHub.cpp
src/tests/profiler/native/legacy/DST/ReJIT/: CMakeLists.txt  InitializeReJIT.cpp  ReJITScript.cpp  ReJITScript.h  Rejitter.cpp  ilrewriter.cpp  project.json
src/tests/profiler/native/legacy/DST/Regressions/: CMakeLists.txt  DDB_13114.cpp  DDB_23429.cpp  DEV11_211123.cpp  FinalizerQueue.cpp  FinalizerThreadCallback.cpp  InitializeRegressions.cpp  VSW_104809.cpp  VSW_215179.cpp  VSW_240582.cpp  VSW_261255.cpp  VSW_261256.cpp  VSW_261257.cpp  VSW_309065.cpp  VSW_455322.cpp  VSW_517637.cpp  VSW_522028.cpp  VSW_576374.cpp  VSW_578286.cpp  VSW_579621.cpp  VSW_589248.cpp  vsw_256310.cpp
src/tests/profiler/native/legacy/DST/RunUnderProfiler/: CMakeLists.txt
src/tests/profiler/native/legacy/DST/StressProfilers/: CMakeLists.txt  InitializeStressProfilers.cpp  Prf1_AllCallbacks_SOK.cpp  Prf2_CodeProfiler.cpp  Prf3_SamplingProfiler.cpp  SimpleRWLock.cpp  SimpleRWLock.hpp  StressProfilers.def
src/tests/profiler/native/legacy/DST/Unit/: CMakeLists.txt  InitializeUnitTests.cpp  Unit_CCW.cpp  Unit_EnumJittedFunctions.cpp  Unit_EnumModules.cpp  Unit_EnumThreads.cpp
src/tests/profiler/native/legacy/GC/: CMakeLists.txt  EnumObjects.cpp  GCAttach.cpp  GCCallbacks.cpp  GCCommon.cpp  GCCommon.h  GCStatics.cpp  InitializeGC.cpp  ProfilerStructs.cpp  ProfilerStructs.h
src/tests/profiler/native/legacy/JIT/: CMakeLists.txt  CollectMpgoProfilerData.cpp  FunctionIDMapper.cpp  FunctionReJIT.cpp  GetFunctionInfo2.cpp  InitializeJIT.cpp  InlineVerify.cpp  JITCommon.cpp  JITCommon.h  NoInline_Verify.cpp  ShadowStackTest.cpp  VerifyInlinerLocalsLimit.cpp
src/tests/profiler/native/legacy/LTS/: CallSequence.cpp  DynamicModules.cpp  GenericsInspection.cpp  GetAppdoamins.cpp  GetClassRoundTrip.cpp  InitializeLTS.cpp  InspectArgAndRetVal.cpp  InspectArgAndRetVal.h  InspectObjectIDs.cpp  LTSCommon.cpp  LTSCommon.h  Modules.cpp
src/tests/profiler/native/legacy/LTS1/: GenericsInspection.cpp  InspectArgAndRetVal.cpp
src/tests/profiler/native/legacy/Stress/: StressCallback.cpp  StressCallback.def  StressCommon.h  StressMemory.cpp  StressMemory.def
src/tests/profiler/native/legacy/TieredCompile/: CMakeLists.txt  InitializeTieredCompilation.cpp  TieredCompilation.cpp
src/tests/profiler/native/legacy/amd64asm/: AsmMacros.inc  CMakeLists.txt  amd64helpers3.asm
src/tests/profiler/native/legacy/armAsm/: armhelper.asm
src/tests/profiler/native/legacy/lts/: CMakeLists.txt  CallSequence.cpp  DynamicModules.cpp  GenericsInspection.cpp  GetAppdoamins.cpp  GetClassRoundTrip.cpp  InitializeLTS.cpp  InspectArgAndRetVal.h  LTSCommon.cpp  LTSCommon.h  Modules.cpp
src/tests/profiler/native/metadatagetdispenser/: CMakeLists.txt  metadatagetdispenser.cpp
src/tests/profiler/native/nullprofiler/: CMakeLists.txt  nullprofiler.cpp
src/tests/profiler/native/rejitprofiler/: CMakeLists.txt  rejitprofiler.cpp  rejitprofiler.h
src/tests/profiler/native/releaseondetach/: CMakeLists.txt  releaseondetach.cpp
src/tests/profiler/native/transitions/: CMakeLists.txt  transitions.cpp
(+556 files in other folders)
